--- a/index.html
+++ b/index.html
@@ -3549,8 +3549,8 @@
             text-align: center;
             filter: drop-shadow(0 0 15px var(--core-glow-blue));
             padding-bottom: 1rem;
-            opacity: 0;
-            transform: translateY(30px);
+            opacity: 1;
+            transform: translateY(0);
             transition: all 0.8s cubic-bezier(0.25, 0.8, 0.25, 1),
                        text-shadow 0.15s ease-out,
                        filter 0.15s ease-out,
@@ -3574,8 +3574,8 @@
             color: rgba(255, 255, 255, 0.6);
             margin-bottom: 5rem;
             font-weight: 300;
-            opacity: 0;
-            transform: translateY(20px);
+            opacity: 0.7;
+            transform: translateY(0);
             transition: all 0.8s cubic-bezier(0.25, 0.8, 0.25, 1) 0.2s;
         }
 
@@ -3596,8 +3596,8 @@
             align-items: flex-start;
             gap: 2rem;
             position: relative;
-            opacity: 0;
-            transform: translateX(-50px);
+            opacity: 1;
+            transform: translateX(0);
             transition: all 0.8s cubic-bezier(0.25, 0.8, 0.25, 1);
         }
 
