Fix Roadmap section background and add Roadmap button to navbar between Dashboard and Gallery

--- a/index.html
+++ b/index.html
@@ -2910,29 +2910,7 @@
             }
         }
         
-        /* Roadmap Section */
-        .roadmap-section {
-            font-size: clamp(1.5rem, 5vw, 2.2rem);
-            font-weight: 200;
-            margin-bottom: 2rem;
-            letter-spacing: 0.15em;
-            text-transform: uppercase;
-            background: linear-gradient(135deg, var(--core-cyan), var(--core-blue), var(--core-text-blue));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            position: relative;
-            text-align: center;
-            filter: drop-shadow(0 0 10px var(--core-glow-blue));
-            padding-bottom: 1.5rem;
-            opacity: 0;
-            transform: translateY(30px);
-            transition: all 0.8s cubic-bezier(0.25, 0.8, 0.25, 1),
-                       text-shadow 0.15s ease-out,
-                       filter 0.15s ease-out,
-                       transform 0.15s ease-out;
-        }
-
+        /* PFP Generator Title */
         .pfp-generator-title.animate {
             opacity: 1;
             transform: translateY(0);
@@ -3522,10 +3500,6 @@
             padding: 80px 20px;
             position: relative;
             z-index: 2;
-            background: linear-gradient(180deg, 
-                rgba(0, 4, 8, 0.95) 0%, 
-                rgba(0, 6, 15, 0.98) 50%, 
-                rgba(0, 4, 8, 0.95) 100%);
         }
         
         .roadmap-content {
@@ -5259,8 +5233,9 @@
                         <a href="#movement" class="nav-link">Movement</a>
                         <a href="#howto" class="nav-link">Buy</a>
                         <a href="#whale" class="nav-link">Whale</a>
-                        <a href="#art" class="nav-link">Gallery</a>
                         <a href="dashboard/index.html" class="nav-link" style="background: linear-gradient(135deg, var(--core-blue), var(--core-cyan)); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 900;">DASHBOARD</a>
+                        <a href="#roadmap" class="nav-link">Roadmap</a>
+                        <a href="#art" class="nav-link">Gallery</a>
                     </div>
                 </div>
             </div>
