Fixed mobile dashboard issues: Corrected Core Editor/PFP Generator layouts, resolved scrolling problems by optimizing touch events, added orange Raptor styling in Types of Core section

--- a/index.html
+++ b/index.html
@@ -2835,6 +2835,24 @@
         }
 
         .core-type-name.raptor-core:hover {
+            color: #ffaa33;
+            text-shadow: 0 0 20px rgba(255, 170, 51, 1),
+                        0 0 30px rgba(255, 170, 51, 0.8),
+                        0 0 40px rgba(255, 170, 51, 0.6);
+            transform: scale(1.05);
+        }
+
+        /* Special orange glow for Raptor type */
+        .core-type-name.raptor-core {
+            color: #ff8c00;
+            text-shadow: 0 0 15px rgba(255, 140, 0, 0.8),
+                        0 0 25px rgba(255, 140, 0, 0.6),
+                        0 0 35px rgba(255, 140, 0, 0.4);
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .core-type-name.raptor-core:hover {
             color: #ffaa00;
             text-shadow: 0 0 20px rgba(255, 170, 0, 1),
                         0 0 30px rgba(255, 170, 0, 0.8),
