--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -87,17 +87,18 @@
         /* Mobile and tablet - allow scrolling without scrollbar */
         @media (max-width: 1024px) {
             html, body {
-                overflow-y: auto !important;
-                -webkit-overflow-scrolling: auto;
-                scroll-behavior: smooth;
+                overflow-y: scroll !important;
+                overflow-x: hidden;
                 height: auto;
-                min-height: 100%;
+                min-height: 100vh;
                 position: relative;
+                scroll-behavior: smooth;
             }
 
-            /* Fix scroll issues on mobile */
-            * {
-                -webkit-overflow-scrolling: auto;
+            /* Ensure smooth scrolling on mobile */
+            body {
+                -webkit-overflow-scrolling: touch;
+                overscroll-behavior: contain;
             }
         }
 
@@ -2450,16 +2451,22 @@
 
             // Touch event handlers for mobile support
             handleTouchStart(e) {
-                e.preventDefault(); // Prevent scrolling
                 const touch = e.touches[0];
                 this.handleMouseDown({
                     clientX: touch.clientX,
                     clientY: touch.clientY
                 });
+                // Only prevent default if we're starting to drag
+                if (this.isDragging) {
+                    e.preventDefault();
+                }
             }
 
             handleTouchMove(e) {
-                e.preventDefault(); // Prevent scrolling
+                // Only prevent scrolling if we're actually dragging
+                if (this.isDragging) {
+                    e.preventDefault();
+                }
                 const touch = e.touches[0];
                 this.handleMouseMove({
                     clientX: touch.clientX,
