--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -100,6 +100,11 @@
                 -webkit-overflow-scrolling: touch;
                 overscroll-behavior: contain;
             }
+            
+            .dashboard-wrapper {
+                height: auto !important;
+                min-height: 100vh;
+            }
         }
 
         body {
@@ -1303,7 +1308,7 @@
             }
             
             .editor-panel {
-                min-height: 750px; /* Increased from 380px */
+                min-height: 600px;
                 height: auto !important;
                 overflow: visible !important;
             }
