--- a/index.html
+++ b/index.html
@@ -220,12 +220,10 @@
                 overscroll-behavior-y: none; /* Prevent bounce effect that shows white background */
                 width: 100%;
                 max-width: 100vw;
-                /* CRITICAL: Keep background fixed on mobile to match desktop - gradient should NOT scroll */
-                background-attachment: fixed !important; /* Keep fixed like desktop */
-                background-position: center center !important;
-                background-repeat: no-repeat !important;
-                background-size: cover !important; /* Ensure gradient covers everything */
-                background-color: #000204 !important; /* Fallback solid color to prevent white flash */
+                /* USE SOLID COLOR on mobile instead of gradient - prevents color changes during scroll */
+                background: #001433 !important; /* Solid color from center of gradient - consistent everywhere */
+                background-attachment: fixed !important;
+                background-color: #001433 !important;
                 /* ULTRA SHARP RENDERING ON ALL MOBILE DEVICES */
                 -webkit-font-smoothing: antialiased !important;
                 -moz-osx-font-smoothing: grayscale !important;
@@ -4411,12 +4409,10 @@
         /* Mobile-specific background fixes */
         @media (max-width: 768px) {
             body {
-                /* CRITICAL: Keep background fixed on mobile to match desktop */
-                background-attachment: fixed !important; /* Keep fixed like desktop - gradient should NOT scroll */
-                background-position: center center !important;
-                background-repeat: no-repeat !important;
-                background-size: cover !important;
-                background-color: #000204 !important; /* Fallback solid color to prevent white flash */
+                /* USE SOLID COLOR on mobile instead of gradient */
+                background: #001433 !important; /* Solid color from center of gradient - consistent everywhere */
+                background-attachment: fixed !important;
+                background-color: #001433 !important;
                 /* Prevent bounce/overscroll showing white background */
                 overscroll-behavior: none;
             }
