--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
                 width: 100%;
                 max-width: 100vw;
                 /* USE SOLID COLOR on mobile instead of gradient - prevents color changes during scroll */
-                background: #001433 !important; /* Solid color from center of gradient - consistent everywhere */
+                background: #000204 !important; /* Solid dark color - consistent everywhere */
                 background-attachment: fixed !important;
-                background-color: #001433 !important;
+                background-color: #000204 !important;
                 /* ULTRA SHARP RENDERING ON ALL MOBILE DEVICES */
                 -webkit-font-smoothing: antialiased !important;
                 -moz-osx-font-smoothing: grayscale !important;
@@ -4410,9 +4410,9 @@
         @media (max-width: 768px) {
             body {
                 /* USE SOLID COLOR on mobile instead of gradient */
-                background: #001433 !important; /* Solid color from center of gradient - consistent everywhere */
+                background: #000204 !important; /* Solid dark color - consistent everywhere */
                 background-attachment: fixed !important;
-                background-color: #001433 !important;
+                background-color: #000204 !important;
                 /* Prevent bounce/overscroll showing white background */
                 overscroll-behavior: none;
             }
