--- a/index.html
+++ b/index.html
@@ -220,10 +220,13 @@
                 overscroll-behavior-y: none; /* Prevent bounce effect that shows white background */
                 width: 100%;
                 max-width: 100vw;
-                /* USE SOLID COLOR on mobile instead of gradient - prevents color changes during scroll */
-                background: #000204 !important; /* Solid dark color - consistent everywhere */
+                /* KEEP THE SAME GRADIENT AS DESKTOP - but with proper sizing */
+                background: radial-gradient(ellipse at center, #001433 0%, #001433 30%, #001228 50%, #000a1a 75%, #000204 100%) !important;
                 background-attachment: fixed !important;
-                background-color: #000204 !important;
+                background-position: center center !important;
+                background-size: 100% 100% !important; /* Make gradient cover full viewport size */
+                background-repeat: no-repeat !important;
+                background-color: #000204 !important; /* Fallback */
                 /* ULTRA SHARP RENDERING ON ALL MOBILE DEVICES */
                 -webkit-font-smoothing: antialiased !important;
                 -moz-osx-font-smoothing: grayscale !important;
@@ -4409,10 +4412,13 @@
         /* Mobile-specific background fixes */
         @media (max-width: 768px) {
             body {
-                /* USE SOLID COLOR on mobile instead of gradient */
-                background: #000204 !important; /* Solid dark color - consistent everywhere */
+                /* KEEP THE SAME GRADIENT AS DESKTOP */
+                background: radial-gradient(ellipse at center, #001433 0%, #001433 30%, #001228 50%, #000a1a 75%, #000204 100%) !important;
                 background-attachment: fixed !important;
-                background-color: #000204 !important;
+                background-position: center center !important;
+                background-size: 100% 100% !important; /* Make gradient cover full viewport size */
+                background-repeat: no-repeat !important;
+                background-color: #000204 !important; /* Fallback */
                 /* Prevent bounce/overscroll showing white background */
                 overscroll-behavior: none;
             }
