--- a/index.html
+++ b/index.html
@@ -220,9 +220,12 @@
                 overscroll-behavior-y: none; /* Prevent bounce effect that shows white background */
                 width: 100%;
                 max-width: 100vw;
-                /* EXACT SAME gradient as desktop - no modifications */
+                /* Same gradient as desktop BUT scroll with page on mobile */
                 background: radial-gradient(ellipse at center, #001433 0%, #001433 30%, #001228 50%, #000a1a 75%, #000204 100%) !important;
-                background-attachment: fixed !important;
+                background-attachment: scroll !important; /* SCROLL not fixed - gradient moves with content */
+                background-position: center top !important; /* Position at top */
+                background-repeat: no-repeat !important;
+                background-size: 100% 100vh !important; /* Size to viewport height */
                 background-color: #000204 !important;
                 /* ULTRA SHARP RENDERING ON ALL MOBILE DEVICES */
                 -webkit-font-smoothing: antialiased !important;
@@ -4409,9 +4412,12 @@
         /* Mobile-specific background fixes */
         @media (max-width: 768px) {
             body {
-                /* EXACT SAME gradient as desktop - no modifications */
+                /* Same gradient as desktop BUT scroll with page on mobile */
                 background: radial-gradient(ellipse at center, #001433 0%, #001433 30%, #001228 50%, #000a1a 75%, #000204 100%) !important;
-                background-attachment: fixed !important;
+                background-attachment: scroll !important; /* SCROLL not fixed */
+                background-position: center top !important;
+                background-repeat: no-repeat !important;
+                background-size: 100% 100vh !important;
                 background-color: #000204 !important;
                 /* Prevent bounce/overscroll showing white background */
                 overscroll-behavior: none;
