--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
                 overscroll-behavior-y: none; /* Prevent bounce effect that shows white background */
                 width: 100%;
                 max-width: 100vw;
-                /* Same gradient as desktop BUT scroll with page on mobile */
-                background: radial-gradient(ellipse at center, #001433 0%, #001433 30%, #001228 50%, #000a1a 75%, #000204 100%) !important;
-                background-attachment: scroll !important; /* SCROLL not fixed - gradient moves with content */
-                background-position: center top !important; /* Position at top */
+                /* HUGE gradient so center color (header color) is visible EVERYWHERE */
+                background: radial-gradient(ellipse at center, #001433 0%, #001433 60%, #001228 80%, #000a1a 95%, #000204 100%) !important;
+                background-attachment: fixed !important; /* Fixed so it stays in place */
+                background-position: center center !important;
                 background-repeat: no-repeat !important;
-                background-size: 100% 100vh !important; /* Size to viewport height */
-                background-color: #000204 !important;
+                background-size: 300% 400% !important; /* MASSIVE size so center is visible everywhere */
+                background-color: #001433 !important; /* Fallback to header/center color */
                 /* ULTRA SHARP RENDERING ON ALL MOBILE DEVICES */
                 -webkit-font-smoothing: antialiased !important;
                 -moz-osx-font-smoothing: grayscale !important;
@@ -4412,13 +4412,13 @@
         /* Mobile-specific background fixes */
         @media (max-width: 768px) {
             body {
-                /* Same gradient as desktop BUT scroll with page on mobile */
-                background: radial-gradient(ellipse at center, #001433 0%, #001433 30%, #001228 50%, #000a1a 75%, #000204 100%) !important;
-                background-attachment: scroll !important; /* SCROLL not fixed */
-                background-position: center top !important;
+                /* HUGE gradient so center color (header color) is visible EVERYWHERE */
+                background: radial-gradient(ellipse at center, #001433 0%, #001433 60%, #001228 80%, #000a1a 95%, #000204 100%) !important;
+                background-attachment: fixed !important;
+                background-position: center center !important;
                 background-repeat: no-repeat !important;
-                background-size: 100% 100vh !important;
-                background-color: #000204 !important;
+                background-size: 300% 400% !important; /* MASSIVE size */
+                background-color: #001433 !important; /* Fallback to header color */
                 /* Prevent bounce/overscroll showing white background */
                 overscroll-behavior: none;
             }
