Fix mobile navbar: ensure Buy and Stats are visible with !important flags

--- a/index.html
+++ b/index.html
@@ -415,13 +415,13 @@
 
             /* Show mobile-only nav links on mobile */
             .nav-link.mobile-only {
-                display: inline-block;
+                display: inline-block !important;
             }
         }
 
         /* Hide mobile-only nav links on desktop */
         .nav-link.mobile-only {
-            display: none;
+            display: none !important;
         }
 
         /* Very small screens - further adjustments */
