Change button text from 'Want more? Click me' to 'ART CHANNEL'

--- a/index.html
+++ b/index.html
@@ -5872,7 +5872,7 @@
             <!-- Want More Button -->
             <div class="want-more-button-container">
                 <a href="https://t.me/+LELZ3q1wJ7szZmVh" target="_blank" class="want-more-button">
-                    Want more? Click me
+                    ART CHANNEL
                 </a>
             </div>
         </div>
