Add cache buster to banner.png for social media preview

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <meta property="og:url" content="https://corecoresolana.vercel.app/">
     <meta property="og:title" content="CORE - Center Of Real Essence">
     <meta property="og:description" content="CORE - Center Of Real Essence - Join the aesthetic movement">
-    <meta property="og:image" content="https://corecoresolana.vercel.app/banner.png">
+    <meta property="og:image" content="https://corecoresolana.vercel.app/banner.png?v=1">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://corecoresolana.vercel.app/">
     <meta property="twitter:title" content="CORE - Center Of Real Essence">
     <meta property="twitter:description" content="CORE - Center Of Real Essence - Join the aesthetic movement">
-    <meta property="twitter:image" content="https://corecoresolana.vercel.app/banner.png">
+    <meta property="twitter:image" content="https://corecoresolana.vercel.app/banner.png?v=1">
     
     <!-- NAVBAR SCROLL SCRIPT - EARLY LOAD -->
     <script>
