Further speed up Art Gallery carousel on mobile

--- a/index.html
+++ b/index.html
@@ -2768,12 +2768,12 @@
             .carousel-row {
                 gap: 10px; /* Zmniejszony gap między obrazkami na mobile */
                 /* PRZYŚPIESZONA animacja na mobile - bardzo szybka */
-                animation-duration: 12s !important;
+                animation-duration: 8s !important;
             }
             
             .carousel-row.reverse {
                 /* Również szybciej dla reverse */
-                animation-duration: 18s !important;
+                animation-duration: 12s !important;
             }
             
             .art-grid {
@@ -7007,11 +7007,11 @@
                 // Core community profiles - duplicate for infinite scroll
                 this.profiles = [
                     { name: "DLN", handle: "@xbtDLN", image: "images/kols/photo_2025-08-09_07-20-57.jpg", link: "https://x.com/xbtDLN" },
-                    { name: "Shadow", handle: "@shadow", image: "images/kols/shadow.jpg", link: "https://x.com/_Shadow36" },
-                    { name: "Poe", handle: "@poe", image: "images/kols/poe.jpg", link: "https://x.com/poe_real69" },
-                    { name: "Gake", handle: "@gake", image: "images/kols/gake.jpg", link: "https://x.com/Ga__ke" },
+                    { name: "Shadow", handle: "@_Shadow36", image: "images/kols/shadow.jpg", link: "https://x.com/_Shadow36" },
+                    { name: "Poe", handle: "@poe_real69", image: "images/kols/poe.jpg", link: "https://x.com/poe_real69" },
+                    { name: "Gake", handle: "@Ga__ke", image: "images/kols/gake.jpg", link: "https://x.com/Ga__ke" },
                     { name: "Fomo", handle: "@fomomofosol", image: "images/kols/photo_2025-08-09_07-20-58.jpg", link: "https://x.com/fomomofosol" },
-                    { name: "Slingor", handle: "@slingor", image: "images/kols/slingor.jpg", link: "https://x.com/slingdeez" },
+                    { name: "Slingor", handle: "@slingdeez", image: "images/kols/slingor.jpg", link: "https://x.com/slingdeez" },
                     { name: "artsch00lreject", handle: "@artsch00lreject", image: "images/kols/photo_2025-08-09_07-20-57 (2).jpg", link: "https://x.com/artsch00lreject" },
                     { name: "OGAntD", handle: "@0GAntD", image: "images/kols/photo_2025-08-09_07-20-56.jpg", link: "https://x.com/0GAntD" }
                 ];
